<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l8U-GK-ehq">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--selectMusic-->
        <scene sceneID="CqE-DY-ujU">
            <objects>
                <viewController title="selectMusic" id="l8U-GK-ehq" customClass="SelectMusicViewController" customModule="spotter" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Vh7-zl-Jma">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pvj-PX-ELt">
                                <rect key="frame" x="0.0" y="162" width="375" height="505"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
                                    <outlet property="dataSource" destination="l8U-GK-ehq" id="oJY-NW-3aW"/>
                                    <outlet property="delegate" destination="l8U-GK-ehq" id="aTO-EN-0jl"/>
                                </connections>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#嬉しい" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fL6-sl-w5a">
                                <rect key="frame" x="154.5" y="118" width="66" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="emotionLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今の気持ちに合う曲を選択" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnh-Qc-fbU">
                                <rect key="frame" x="71.5" y="81" width="232.5" height="23"/>
                                <accessibility key="accessibilityConfiguration" identifier="descriptionLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="pvj-PX-ELt" firstAttribute="top" secondItem="fL6-sl-w5a" secondAttribute="bottom" constant="23" id="62O-rw-xRc"/>
                            <constraint firstItem="pvj-PX-ELt" firstAttribute="leading" secondItem="cSA-5F-o62" secondAttribute="leading" id="GON-F6-Viu"/>
                            <constraint firstItem="pvj-PX-ELt" firstAttribute="centerX" secondItem="Vh7-zl-Jma" secondAttribute="centerX" id="Iuv-1x-MsM"/>
                            <constraint firstItem="pvj-PX-ELt" firstAttribute="bottom" secondItem="cSA-5F-o62" secondAttribute="bottom" id="NlM-Pj-dEn"/>
                            <constraint firstItem="fL6-sl-w5a" firstAttribute="top" secondItem="cnh-Qc-fbU" secondAttribute="bottom" constant="14" id="TYv-i7-pIk"/>
                            <constraint firstItem="pvj-PX-ELt" firstAttribute="trailing" secondItem="cSA-5F-o62" secondAttribute="trailing" id="nAl-yf-fUA"/>
                            <constraint firstItem="cnh-Qc-fbU" firstAttribute="centerX" secondItem="Vh7-zl-Jma" secondAttribute="centerX" id="oAh-cx-wf8"/>
                            <constraint firstItem="cnh-Qc-fbU" firstAttribute="top" secondItem="cSA-5F-o62" secondAttribute="top" constant="17" id="oVn-nP-M7k"/>
                            <constraint firstItem="fL6-sl-w5a" firstAttribute="centerX" secondItem="Vh7-zl-Jma" secondAttribute="centerX" id="qGB-Md-h3K"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="cSA-5F-o62"/>
                    </view>
                    <navigationItem key="navigationItem" id="8Sv-eQ-6S0"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="emotionLabel" destination="fL6-sl-w5a" id="sYq-IQ-3hH"/>
                        <outlet property="musicTableView" destination="pvj-PX-ELt" id="3hP-MU-iQH"/>
                        <segue destination="Ggs-MF-Tbv" kind="show" identifier="goConfirmTweet" id="Ao3-iv-eqL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="I6D-J0-zJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-108" y="126.38680659670166"/>
        </scene>
        <!--ConfirmTweet-->
        <scene sceneID="Wg5-fm-DdL">
            <objects>
                <viewControllerPlaceholder storyboardName="ConfirmTweet" id="Ggs-MF-Tbv" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="viL-Kv-lEH" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="692" y="130"/>
        </scene>
    </scenes>
</document>
