...
                                    <segue destination="61g-AH-GGk" kind="show" id="oG6-GL-OpI"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXi-24-Ago">
                                <rect key="frame" x="143" y="236" width="88" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Tweet画面へ"/>
                                <connections>
                                    <segue destination="MuX-pV-MtE" kind="show" id="PhD-uO-JQL"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tdj-gk-T2b">
                                <rect key="frame" x="141" y="344" width="92" height="30"/>
...
                                    <segue destination="p37-6c-2IR" kind="show" id="lQ3-cN-aXZ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g27-Kp-kPX">
                                <rect key="frame" x="118" y="151" width="138" height="31"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="タイムライン画面"/>
                                <connections>
                                    <segue destination="cN5-64-1mq" kind="show" id="0d0-QP-Vth"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
