...
                    <view key="view" contentMode="scaleToFill" id="DNT-Cl-xCG">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8O2-Mo-bzl">
                                <rect key="frame" x="254" y="23" width="77" height="77"/>
                                <accessibility key="accessibilityConfiguration" identifier="tweetButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="77" id="st0-jd-9nZ"/>
                                    <constraint firstAttribute="height" constant="77" id="z4l-r4-AOm"/>
                                </constraints>
                                <state key="normal" title="Button" image="pen"/>
                                <connections>
...
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-pk-sOX">
                                <rect key="frame" x="20" y="23" width="78" height="78"/>
                                <accessibility key="accessibilityConfiguration" identifier="profileImage">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="78" id="5JL-j4-C7d"/>
                                    <constraint firstAttribute="width" constant="78" id="ciZ-FN-1mu"/>
                                </constraints>
...
