...
                                        <rect key="frame" x="166" y="0.0" width="162" height="67"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="162" id="lyy-sf-8kS"/>
                                            <constraint firstAttribute="height" constant="67" id="rJo-bS-4dq"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <state key="normal" title="#楽しい"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="color" keyPath="buttonColor">
                                                <color key="value" red="0.070393599569797516" green="0.89194482564926147" blue="0.45761072635650635" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="dcJ-WN-WsA" firstAttribute="width" secondItem="VyL-UJ-Yeu" secondAttribute="width" id="UZu-0p-xen"/>
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="descriptionLabel" text="今の気持ちを選択" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xap-aM-spH">
                                <rect key="frame" x="20" y="312" width="171" height="25.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="descriptionLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="d3T-7r-DrF" customClass="TweetTextView" customModule="spotter" customModuleProvider="target">
                                <rect key="frame" x="20" y="88" width="335" height="160"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="tweetTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="d3T-7r-DrF" secondAttribute="height" multiplier="67:32" id="DP8-LF-lb8"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <userDefinedRuntimeAttributes>
...
